--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,43 +5,28 @@
 <div class="place-items-center">
   <section class="relative mx-auto">
     <!-- navbar -->
-    <nav class="flex items-center justify-between text-white" style="background-color: #282828; position: relative; margin-bottom: 20px; pading-bottom: 20px; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; width: 100%;">
-      <div class="flex items-center w-full px-5 py-6 w-90 xl:px-12">
+    <nav class="flex items-center justify-between text-white" style="background-color: #282828; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; width: 100%;">
+      <div class="flex items-center   w-full px-5 py-6 w-90 xl:px-12  ">
         <a class="text-3xl font-bold font-heading nav-title" href="/">
-          <%= image_tag "yutub.png", width: 30, height: 30 %>
+          <%= image_tag "yutub.png", alt: "logo", width: "30px", height: "30px" %>
         </a>
         <!-- Nav Links -->
-        <li>
-          <a class= "" href= "/"> Home </a>
-        </li>
-        <% if current_user %>
-        <li>
-          <a class= "" href= "#"> 
-            <%= link_to "Upload", new_post_path %> 
-          </a>
-        </li>
+        <ul class="hidden px-4 mx-auto space-x-12  md:flex font-heading">
+          <li><a class="hover:text-gray-200" href="/">Home</a></li>
+          <% if current_user %>
 
-        <li>
-          <a class= ""> 
-            <%#= link_to "Profile", user_path(current_user) %> 
-          </a>
-          <%= button_to("Log out", destroy_user_session_path, method: :delete) %>
-        </li>
 
-        <% else %>
-        
-        <li>
-          <a class= "" href= "#"> 
-            <%= link_to "Sign Up", new_user_registration_path %> 
-          </a>
-        </li>
+            <li><a class="hover:text-gray-200" href="#">  <%= link_to "My Media", pages_media_path %></a></li>
 
+            <%= button_to("Log Out", destroy_user_session_path, method: :delete) %></li>
+          <% else %>
+            <li><a class="hover:text-gray-200" href="#">  <%= link_to "Sign up", new_user_registration_path %></a></li>
+            <li><%= link_to "Login", new_user_session_path, class:"bg-white hover:bg-gray-100 text-gray-800 py-2 px-4 border border-gray-400 rounded shadow" %></a></li>
+          </ul>
         <% end %>
-                 
         <!-- Header Icons -->
       </div>
       <!-- Responsive navbar -->
-      
       <%#= render "layouts/search_bar"%>
     </nav>
   </section>
