--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,5 +8,13 @@
     <strong>Description:</strong>
     <%= post.description %>
   </p>
-
+  <p>
+    <%#= image_tag(post.image, style: "height: 200px; width: 100px") %>
+  </p>
+  <p>
+    <video controls>
+      <source src="<%#= url_for(post.video) %>" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </p>
 </div>
